# rendimiento_escolar_cl

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 01_eda_rendimiento_escolar.ipynb  DemandaESUP.ipynb
re_cl/: __init__.py  config.py  dataset.py  features.py  plots.py
re_cl/modeling/: predict.py  train.py
references/: Frecuencia_Rendimiento_2024.xlsx
